{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 16,
  "lineage": "83cc02e7-1ccc-f986-d410-2bf0b7ab2ecf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807624821827:security-group/sg-93b438c4",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-93b438c4",
            "ingress": [],
            "name": "default",
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "default VPC security group",
              "Name": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-e24e6898"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cluster-1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-016fadfb600e3b8f6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-016fadfb600e3b8f6",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0582f58a0ba2a5f8a",
            "private_dns": "ip-172-31-45-213.ec2.internal",
            "private_ip": "172.31.45.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c2493f917f5e16e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh",
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-65e6f139",
            "tags": {
              "Name": "tf-cl1-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee1284062c22e6c3",
              "sg-93b438c4"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-0d6bf07a826c2bc95",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0d6bf07a826c2bc95",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-00eb1fb3c378e69de",
            "private_dns": "ip-172-31-32-30.ec2.internal",
            "private_ip": "172.31.32.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08c72286567faa378",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh",
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-65e6f139",
            "tags": {
              "Name": "tf-cl1-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee1284062c22e6c3",
              "sg-93b438c4"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-images",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:807624821827:instance/i-043722b8b176e10ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-043722b8b176e10ec",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-060ac47561c632fec",
            "private_dns": "ip-172-31-35-14.ec2.internal",
            "private_ip": "172.31.35.14",
            "public_dns": "ec2-54-196-64-125.compute-1.amazonaws.com",
            "public_ip": "54.196.64.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dc35d405da7124f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh",
              "allow_www",
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-65e6f139",
            "tags": {
              "Name": "tf-server-images"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d2626f1b25473c86",
              "sg-0ee1284062c22e6c3",
              "sg-93b438c4"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_s3_bucket.bucketlabs",
            "aws_security_group.allow_ssh",
            "aws_security_group.allow_www"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807624821827:security-group/sg-0ee1284062c22e6c3",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0ee1284062c22e6c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.184.65.86/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-e24e6898"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_www",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807624821827:security-group/sg-0d2626f1b25473c86",
            "description": "Allow http inbound traffic",
            "egress": [],
            "id": "sg-0d2626f1b25473c86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_www",
            "name_prefix": null,
            "owner_id": "807624821827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_www"
            },
            "timeouts": null,
            "vpc_id": "vpc-e24e6898"
          }
        }
      ]
    }
  ]
}